Get staging status feature was added

--- a/conf/example.conf
+++ b/conf/example.conf
@@ -2,3 +2,7 @@
 api = example_api_key
 url = https://example.campfirenow.com
 room = ExampleRoom
+
+[aws]
+access_key = example
+secret_key = example
