blame somebody feature was added

--- a/conf/example.conf
+++ b/conf/example.conf
@@ -1,7 +1,7 @@
 [credentials]
 api = example_api_key
 url = https://example.campfirenow.com
-room = ExampleRoom
+room = ExampleRoom,SecondRoom
 
 [aws]
 access_key = example
